--- a/index.css
+++ b/index.css
@@ -93,3 +93,22 @@
       opacity: 1;
     }
   }
+#cerrarPopup {
+  display: inline-block;
+  background-color: #ff5722;
+  color: black;
+  font-size: 18px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  text-align: center;
+  text-decoration: none;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s ease-in-out;
+}
+
+#cerrarPopup:hover {
+  background-color: #ff7043;
+  box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.3);
+  transform: translateY(-2px);
+}
