--- a/index.css
+++ b/index.css
@@ -58,7 +58,7 @@
   }  .opcion::before{
     z-index: 99999;
     position: absolute;
-    display: block;
+    /* display: block; */
     text-align: center;
     font-size: 15px;
     color: #202020
@@ -72,13 +72,16 @@
     transform: rotate(90deg);
   }  .popup {
     display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #FFFFFF;
-    font-size: 40px;
-    padding: 130px;
+    font-size: 30px;
+    height: 360px;
+    width: 360px;
     border-radius: 200px;
     text-align: center;
     animation-name: popupAnimation;
@@ -95,8 +98,8 @@
   }
 #cerrarPopup {
   display: inline-block;
-  background-color: #ff5722;
-  color: black;
+  background-color: #000000;
+  color: rgb(255, 255, 255);
   font-size: 18px;
   padding: 10px 20px;
   border: none;
@@ -108,7 +111,7 @@
 }
 
 #cerrarPopup:hover {
-  background-color: #ff7043;
+  background-color: #000000;
   box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.3);
   transform: translateY(-2px);
 }
